--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -1,15 +1,15 @@
 <script
   src="https://giscus.app/client.js"
   data-repo="PJeongHye/PJeongHye.github.io"
-  data-repo-id="R_kgDONCECXQ"
-  data-category="[ENTER CATEGORY NAME HERE]"
-  data-category-id="[ENTER CATEGORY ID HERE]"
-  data-mapping="pathname"
+  data-repo-id="샬라샬라"
+  data-category="Announcements"
+  data-category-id="샬라샬라"
+  data-mapping="title"
   data-strict="0"
   data-reactions-enabled="1"
   data-emit-metadata="0"
-  data-input-position="bottom"
-  data-theme="preferred_color_scheme"
+  data-input-position="top"
+  data-theme="light"
   data-lang="ko"
   crossorigin="anonymous"
   async
