--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -21,3 +21,12 @@ pre {
   margin-right: 0;
   margin-left: 0;
 }
+
+.post-date {
+  height: auto;
+  min-height: 2rem;
+  &>.ellipsis {
+    overflow: visible;
+    white-space: wrap;
+  }
+}
