--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -1,3 +1,7 @@
+html {
+  --dark-mode-body-bg: hsl(231, 15%, 18%) !important;
+}
+
 .dl-table {
   a {
     @supports ((text-decoration-thickness: initial) and (text-underline-offset: initial)) {
@@ -29,4 +33,14 @@ pre {
     overflow: visible;
     white-space: wrap;
   }
+}
+
+html {
+  --accent-color: #FF79C6;
+  --accent-color-faded: rgba(255, 121, 198, 0.5);
+  --accent-color-highlight: rgba(54,188,155);
+  --accent-color-darkened: rgb(255.4648760331, 121.285124, 198.5010330579);
+  --theme-color: #282A36;
+  --dark-mode-body-bg: #282A36;
+  --dark-mode-border-color: #282A36;
 }
