댓글창 수정

--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -1,6 +1,6 @@
 <script
   src="https://giscus.app/client.js"
-  data-repo="PJeongHye/PJeongHye.github.io"
+  data-repo="yellowfiber/yellowfiber.github.io"
   data-repo-id="R_kgDONCECXQ"
   data-category="General"
   data-category-id="DIC_kwDONCECXc4Cjd4w"
