--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -36,12 +36,11 @@ pre {
   }
 }
 
-html {
-  --accent-color: #FF79C6;
-  --accent-color-faded: rgba(255, 121, 198, 0.5);
-  --accent-color-highlight: rgba(54,188,155);
-  --accent-color-darkened: rgb(255.4648760331, 121.285124, 198.5010330579);
-  --theme-color: #282A36;
-  --dark-mode-body-bg: #282A36;
-  --dark-mode-border-color: #282A36;
+div.highlight>.pre-header {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+div.highlight>button {
+  right: 0;
 }
